// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Role view - index permission panel Index permission list renders table with index permissions 1`] = `
<PanelWithHeader
  count={2}
  headerSubText="Index permissions allow you to specify how users in this role can access the indices. You can restrict a role to a subset of documents in an index, and which document fields a user can see as well. If you use field-level security in conjunction with document-level security, make sure you don't restrict access to the fields that document-level security uses."
  headerText="Index permissions"
  helpLink="https://opensearch.org/docs/latest/security-plugin/access-control/default-action-groups/#index-level"
>
  <EuiInMemoryTable
    columns={
      Array [
        Object {
          "field": "index_patterns",
          "name": "Index",
          "render": [Function],
          "sortable": true,
          "truncateText": true,
        },
        Object {
          "field": "allowed_actions",
          "name": "Permissions",
          "render": [Function],
          "truncateText": true,
        },
        Object {
          "field": "dls",
          "name": <EuiToolTip
            content="Document-level security lets you restrict a role to a subset of documents in an index."
            delay="regular"
            position="top"
          >
            <span>
              Document-level security
               
              <EuiIcon
                className="eui-alignTop"
                color="subdued"
                size="s"
                type="questionInCircle"
              />
            </span>
          </EuiToolTip>,
          "render": [Function],
        },
        Object {
          "field": "fls",
          "name": <EuiToolTip
            content="Field-level security lets you control which document fields a user can see."
            delay="regular"
            position="top"
          >
            <span>
              Field-level security
               
              <EuiIcon
                className="eui-alignTop"
                color="subdued"
                size="s"
                type="questionInCircle"
              />
            </span>
          </EuiToolTip>,
          "render": [Function],
        },
        Object {
          "field": "masked_fields",
          "name": "Anonymizations",
          "render": [Function],
          "truncateText": true,
        },
      ]
    }
    data-test-subj="index-permission-container"
    error=""
    isExpandable={true}
    itemId="id"
    items={
      Array [
        Object {
          "allowed_actions": Array [
            "read",
            "write",
          ],
          "dls": "{\\"query\\": {\\"match_all\\": {}}}",
          "fls": Array [
            "field1",
            "field2",
          ],
          "id": 1,
          "index_patterns": Array [
            "test-index-*",
            "test-index-1-*",
            "test-index-2-*",
            "test-index-3-*",
          ],
          "masked_fields": Array [
            "masked1",
            "masked2",
          ],
        },
        Object {
          "allowed_actions": Array [
            "read",
          ],
          "dls": "",
          "fls": Array [],
          "id": 2,
          "index_patterns": Array [
            "another-index",
          ],
          "masked_fields": Array [],
        },
      ]
    }
    loading={false}
    message={false}
    responsive={true}
    sorting={
      Object {
        "sort": Object {
          "direction": "asc",
          "field": "type",
        },
      }
    }
    tableLayout="auto"
  />
</PanelWithHeader>
`;

exports[`Role view - index permission panel Render document level security renders document level security when dls is invalid json 1`] = `
<Fragment>
  {"key": "value"%%%}
</Fragment>
`;

exports[`Role view - index permission panel Render document level security renders document level security when dls is valid json 1`] = `
<Fragment>
  <ExpressionModal
    expression={
      Object {
        "key": "value",
      }
    }
    title="Document-level security"
  />
</Fragment>
`;

exports[`Role view - index permission panel Render document level security renders em-dash when document level security is empty 1`] = `
<Fragment>
  <span>
    —
  </span>
</Fragment>
`;
